API_Reference/pymilvus/v2.5.x/MilvusClient/Management/compact.md
# compact()

This operation compacts the collection by merging small segments into larger ones. It is recommended to call this operation after inserting a large amount of data into a collection.

## Request Syntax

```python
compact(
    self,
    collection_name: str,
    is_clustering: Optional[bool] = False,
    timeout: Optional[float] = None,
    **kwargs,
) -> int
```

**PARAMETERS:**

- **collection_name** (*str*) -

    The name of the target collection.

- **is_clustering** (*bool*) -

    Whether to perform a clustering compaction. For details, refer to [Clustering Compaction](https://milvus.io/docs/clustering-compaction.md).

- **timeout** (*Optional&#91;float&#93;*) - 

    The timeout duration for this operation.

    Setting this to None indicates that this operation timeouts when any response arrives or any error occurs.

**RETURN TYPE:**

*int*

**RETURNS:**

A compaction job ID, which can be used to get the compaction status.

**EXCEPTIONS:**

- **MilvusException**

    This exception will be raised when any error occurs during this operation, especially when the specified alias does not exist.

## Example

```python
from pymilvus import MilvusClient

# 1. Create a milvus client
client = MilvusClient(
    uri="http://localhost:19530",
    token="root:Milvus"
)

client.compact(
    collection_name="collection_name"
)
```

